# src

./: .gitignore  Build_surface.h  CMakeCache.txt  CMakeLists.txt  Cell_inside.h  HRBF_closed.h  Makefile  Segmentation.cpp  Segmentation.h  Sphere_hrbf.tga  Sphere_hrbf_closed.tga  Sphere_poisson.tga  Surface_builder.h  TriMesh.cpp  TriMesh.h  Viewer.cpp  Viewer.h  cmake_install.cmake  config.txt  hrbf_core.h  implicit_function.h  implicit_function.h~  implicit_function_crbf.h  implicit_function_hrbf.h  main.cpp  mesh.off  meshForReplacePolyhedron.off  out  out.off  pick  result.off  sphere_poisson(addVertices).tga  takeUnitPolyhedron.h  test  test.txt  test.xyz  testpoint  名称未設定.off  名称未設定.ply
dissertation/: comparemesher.tex  comparemesher2.aux  comparemesher2.tex  comparemesher2_20170510.aux  comparemesher2_20170510.out  comparemesher2_20170510.tex  thesis.sty
graph/: a.out  main.cpp
testSeg/: CMakeCache.txt  CMakeLists.txt  Figure1_Deer.ply  Makefile  cmake_install.cmake  segmentation.cpp  test
